# traffic-light-master-script

./: CMakeLists.txt  main.c  main.h
common/modbus/: sm_modbus_define.h
common/modbus/mb_master/: CMakeLists.txt  sm_mb_master_if.h  sm_mb_master_impl.c  sm_mb_master_impl.h
common/modbus/mb_slave/: CMakeLists.txt  sm_mb_slave_if.h  sm_mb_slave_impl.c  sm_mb_slave_impl.h
libs/nanoModbus/: CMakeLists.txt  README.md  nanomodbus.c  nanomodbus.h
services/light_master_service/: CMakeLists.txt  light_data.h  light_master_service.c  light_master_service.h
utils/: CMakeLists.txt  sm_logger.c
utils/timing/: sm_time_utils.h
utils/unix/: linux_serial.c  linux_serial.h
